Delete attendances by userId
