# FinalWork2-Microservices/attendance/src/infrastructure/presentation/attendanceController.ts
@@ -6,13 +6,13 @@ import { DI, ListAttendancesFilters } from '../../types';
 import { AttendanceMapper } from '../attendanceMapper';
 import { Response } from './response';
 
-@controller('/attendances')
+@controller('/')
 export class AttendanceController extends BaseHttpController {
   constructor(@inject(DI.AttendanceService) private attendanceService: AttendanceService) {
     super();
   }
 
-  @httpGet('/')
+  @httpGet('attendances')
   private async listAttendance(@request() req: Request, @response() res: ExpressResponse) {
     const filters: ListAttendancesFilters = {};
     if (req.query.userId) {
@@ -22,16 +22,22 @@ export class AttendanceController extends BaseHttpController {
     Response.ok(res, attendances);
   }
 
-  @httpPost('/')
+  @httpPost('attendances')
   private async createAttendance(@request() req: Request, @response() res: ExpressResponse) {
     const attendance = await this.attendanceService.createAttendance(req.body);
     const attendanceDto = AttendanceMapper.toResponseDto(attendance);
     Response.ok(res, attendanceDto, 'Attendance successfully registered');
   }
 
-  @httpDelete('/:id')
+  @httpDelete('attendances/:id')
   private async deleteAttendance(@requestParam('id') id: string, @response() res: ExpressResponse) {
     await this.attendanceService.deleteAttendance(id);
     Response.ok(res, null, 'Attendance successfully deleted');
+  }
+
+  @httpDelete('users/:userId/attendances')
+  private async deleteUserAttendances(@requestParam('userId') userId: string, @response() res: ExpressResponse) {
+    await this.attendanceService.deleteUserAttendances(userId);
+    Response.ok(res, null, "User's attendances successfully deleted");
   }
 }
