# FinalWork2-Microservices/attendance/src/infrastructure/presentation/swagger.json
@@ -103,7 +103,7 @@
       "delete": {
         "tags": ["attendances"],
         "summary": "Delete an attendance by ID",
-        "operationId": "deleteAttendances",
+        "operationId": "deleteAttendance",
         "parameters": [
           {
             "name": "id",
@@ -114,6 +114,34 @@
         "responses": {
           "200": {
             "description": "Attendance successfully deleted.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/APIResponse"
+                }
+              }
+            }
+          },
+          "404": { "$ref": "#/components/responses/NotFound" },
+          "500": { "$ref": "#/components/responses/InternalServerError" }
+        }
+      }
+    },
+    "/users/{id}/attendances": {
+      "delete": {
+        "tags": ["attendances"],
+        "summary": "Delete all attendances of a user",
+        "operationId": "deleteUserAttendances",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User's attendances successfully deleted.",
             "content": {
               "application/json": {
                 "schema": {
